--- a/src/stories/button.css
+++ b/src/stories/button.css
@@ -1,15 +1,15 @@
 .storybook-button {
-  font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: "Nunito Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 700;
   border: 0;
-  border-radius: 3em;
+  border-radius: 1em;
   cursor: pointer;
   display: inline-block;
   line-height: 1;
 }
 .storybook-button--primary {
   color: white;
-  background-color: #1ea7fd;
+  background-color: peachpuff;
 }
 .storybook-button--secondary {
   color: #333;
@@ -22,7 +22,7 @@
 }
 .storybook-button--medium {
   font-size: 14px;
-  padding: 11px 20px;
+  padding: 21px 20px;
 }
 .storybook-button--large {
   font-size: 16px;
