--- a/src/stories/button.css
+++ b/src/stories/button.css
@@ -9,7 +9,7 @@
 }
 .storybook-button--primary {
   color: white;
-  background-color: peachpuff;
+  background-color: limegreen;
 }
 .storybook-button--secondary {
   color: #333;
