--- a/src/stories/page.css
+++ b/src/stories/page.css
@@ -1,5 +1,5 @@
 section {
-  font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: "Nunito Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 24px;
   padding: 48px 20px;
@@ -23,7 +23,7 @@ p {
 
 a {
   text-decoration: none;
-  color: #1ea7fd;
+  color: pink;
 }
 
 ul {
